--- a/app-starter/package.json
+++ b/app-starter/package.json
@@ -6,17 +6,18 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "apollo-boost": "^0.3.1",
-    "graphql": "^14.2.1",
+    "graphql": "^14.3.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.4",
+    "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "upgrade-interactive": "npm-check --update"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "npm-check": "^5.9.0"
+  }
 }
