--- a/app-starter/package.json
+++ b/app-starter/package.json
@@ -8,7 +8,7 @@
     "apollo-boost": "^0.3.1",
     "graphql": "^14.3.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.5",
+    "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
   },
